--- a/src/app/shared/components/poster/poster.component.html
+++ b/src/app/shared/components/poster/poster.component.html
@@ -1,3 +1,5 @@
-<p>
-  poster works!
-</p>
+<clr-icon [attr.shape]="icon" class="poster__icon"></clr-icon>
+<b class="poster__label">{{label}}</b>
+<span class="poster__description p7">
+  <ng-content></ng-content>
+</span>
