--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,20 +21,20 @@
 
 // Drag and drop styles for ng2-dnd
 .dnd-drag-start {
-  -moz-transform:scale(0.8);
-  -webkit-transform:scale(0.8);
-  transform:scale(0.8);
-  opacity:0.7;
-  border: 2px dashed #000;
+  //-moz-transform:scale(0.8);
+  //-webkit-transform:scale(0.8);
+  //transform:scale(0.8);
+  opacity:0.3;
+  //border: 2px dashed #000;
 }
 
 .dnd-drag-enter {
   opacity:0.7;
-  border: 2px dashed #000;
+  //border: 2px dashed #000;
 }
 
 .dnd-drag-over {
-  border: 2px dashed #000;
+  //border: 2px dashed #000;
 }
 
 .dnd-sortable-drag {
