Disallow to drag an image

--- a/src/app/shared/components/food-card/food-card.component.scss
+++ b/src/app/shared/components/food-card/food-card.component.scss
@@ -60,6 +60,12 @@ $color-active: #0094d2;
 
 .food-card__image {
   width: 100%;
+  user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .food-card__title {
