--- a/src/app/management/menu-editor/menu-editor.component.scss
+++ b/src/app/management/menu-editor/menu-editor.component.scss
@@ -35,6 +35,7 @@
   max-width: 70%;
   flex: 0 0 70%;
   padding-top: 24px;
+  position: relative;
 }
 
 .menu-editor__section:first-child .menu-editor__section__title {
