--- a/src/app/shared/components/datepicker/datepicker.component.html
+++ b/src/app/shared/components/datepicker/datepicker.component.html
@@ -1,7 +1,7 @@
 <div class="ngx-datepicker-container" style="display: inline-block">
   <input type="text" *ngIf="showDateInput" class="ngx-datepicker-input" [(ngModel)]="displayValue" readonly (click)="toggle()">
   <ng-content></ng-content>
-  <div class="ngx-datepicker-calendar-container" *ngIf="isOpened">
+  <div class="ngx-datepicker-calendar-container ngx-datepicker-position-{{position}}" *ngIf="isOpened">
     <div class="topbar-container">
       <svg width="7px" height="10px" viewBox="0 0 7 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" (click)="prevMonth()">
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
