feat(orders): Add orders editor basis, fix routing

--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="header-nav">
     <a
-      routerLink="/dashboard"
+      routerLink="/orders"
       routerLinkActive="active"
       class="nav-link nav-text"
     >
