fix(calendar): add animation

--- a/src/app/shared/components/datepicker/datepicker.component.sass
+++ b/src/app/shared/components/datepicker/datepicker.component.sass
@@ -7,6 +7,12 @@ $text: #3D495C
 $text-secondary: #A4A9B1
 $color: #1A91EB
 
+.ngx-datepicker-calendar-container
+  animation-duration: 0.2s
+  animation-timing-function: ease-out
+  animation-name: anim-fade-zoon-in
+
+
 .ngx-datepicker-position-bottom-left
   top: 40px
   right: 0
