--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'styles/anim';
+
+
 .flex-row {
   display: flex;
   flex-direction: column;
