--- a/src/app/container/order-editor/order-editor.component.html
+++ b/src/app/container/order-editor/order-editor.component.html
@@ -2,12 +2,12 @@
   <div class="order-editor__container flex">
     <!-- Page container -->
     <div class="order-editor__header">
-      <app-header-toolbar [label]="'Orders for ' + displayedDate" [smaller]="false">
+      <app-header-toolbar [label]="'Order for ' + displayedDate" [smaller]="false">
         <!-- Delete button -->
         <button
           type="button"
           class="btn btn-danger"
-          *ngIf="!menuEmpty && isLoaded && (initialSize > 0)"
+          *ngIf="!menuEmpty && orderEditable && isLoaded && (initialSize > 0)"
           [clrLoading]="deleteStatus.isLoading"
           [disabled]="saveStatus.isLoading || deleteStatus.isLoading"
           (click)="deleteMenu()"
@@ -21,7 +21,7 @@
         <button
           type="button"
           class="btn btn-success"
-          *ngIf="!menuEmpty && collectionChanged && (selectedIds.length > 0) && (isLoaded)"
+          *ngIf="!menuEmpty && orderEditable && collectionChanged && (selectedIds.length > 0) && (isLoaded)"
           [clrLoading]="saveStatus.isLoading"
           [disabled]="saveStatus.isLoading || deleteStatus.isLoading"
           (click)="saveChanges()"
@@ -44,34 +44,39 @@
             type="button"
             class="btn btn-primary"
             [disabled]="isLoading || saveStatus.isLoading || deleteStatus.isLoading"
-            (click)="picker.toggle()"
+            (click)="openPicker(picker)"
           >
             <clr-icon shape="calendar"></clr-icon>
             <span>Change date</span>
           </button>
         </app-datepicker>
       </app-header-toolbar>
+
+      <!-- Dishes save success message -->
+      <app-alert *ngIf="saveStatus.isLoaded" type="success" icon="check-circle" [dismissable]="false">
+        Changes saved successfully
+      </app-alert>
+
+      <!-- Dishes save fail message -->
+      <app-alert *ngIf="saveStatus.isFailed" type="danger" icon="exclamation-circle" [dismissable]="false">
+        Failed to save changes: {{saveStatus.error}}
+      </app-alert>
+
+      <!-- Dishes save success message -->
+      <app-alert *ngIf="deleteStatus.isLoaded" type="success" icon="check-circle" [dismissable]="false">
+        Order canceled successfuly
+      </app-alert>
+
+      <!-- Dishes save fail message -->
+      <app-alert *ngIf="deleteStatus.isFailed" type="danger" icon="exclamation-circle" [dismissable]="false">
+        Failed to cancel order: {{deleteStatus.error}}
+      </app-alert>
+
+      <!-- Notification about read only mode -->
+      <app-alert *ngIf="!orderEditable" type="warning" icon="exclamation-triangle" [dismissable]="false">
+        This order cannot be changed
+      </app-alert>
     </div>
-
-    <!-- Dishes save success message -->
-    <app-alert *ngIf="saveStatus.isLoaded" type="success" icon="check-circle" [dismissable]="false">
-      Changes saved successfully
-    </app-alert>
-
-    <!-- Dishes save fail message -->
-    <app-alert *ngIf="saveStatus.isFailed" type="danger" icon="exclamation-circle" [dismissable]="false">
-      Failed to save changes: {{saveStatus.error}}
-    </app-alert>
-
-    <!-- Dishes save success message -->
-    <app-alert *ngIf="deleteStatus.isLoaded" type="success" icon="check-circle" [dismissable]="false">
-      Order canceled successfuly
-    </app-alert>
-
-    <!-- Dishes save fail message -->
-    <app-alert *ngIf="deleteStatus.isFailed" type="danger" icon="exclamation-circle" [dismissable]="false">
-      Failed to cancel order: {{deleteStatus.error}}
-    </app-alert>
 
     <!-- Items load fail message -->
     <app-retry-alert
@@ -117,7 +122,7 @@
                   [imageUrl]="item.photoUrl"
                   [rateable]="false"
                   [editable]="false"
-                  [selectable]="true"
+                  [selectable]="orderEditable"
                   [selected]="selectedClassItems[item.type] === item.id"
                   [badgeColor]="getDishCategoryColor(item.type)"
                   (checkChange)="onItemCheckToggle($event, item.type, item.id)"
