--- a/src/app/shared/components/datepicker/datepicker.component.sass
+++ b/src/app/shared/components/datepicker/datepicker.component.sass
@@ -11,6 +11,7 @@ $color: #1A91EB
   animation-duration: 0.2s
   animation-timing-function: ease-out
   animation-name: anim-fade-zoon-in
+  z-index: 9
 
 
 .ngx-datepicker-position-bottom-left
