fix(routing): Fix router behavior

--- a/src/app/container/header/header.component.html
+++ b/src/app/container/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-6">
   <div class="branding">
-    <a class="nav-link" href="/">
+    <a class="nav-link" routerLink="/">
       <span class="title">{{title}}</span>
     </a>
   </div>
