--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -4,11 +4,11 @@
   </div>
   <nav class="sidenav">
     <section class="sidenav-content">
+      <a routerLink="/management" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
+        Menu
+      </a>
       <a routerLink="/management/catalog" routerLinkActive="active" class="nav-link">
         Items
-      </a>
-      <a routerLink="/management/schedule" routerLinkActive="active" class="nav-link">
-        Schedule
       </a>
       <a routerLink="/management/users" routerLinkActive="active" class="nav-link">
         Users
