--- a/src/app/container/dashboard/dashboard.component.html
+++ b/src/app/container/dashboard/dashboard.component.html
@@ -4,11 +4,11 @@
   </div>
   <nav class="sidenav">
     <section class="sidenav-content">
-      <a routerLink="/orders" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
+      <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="nav-link">
         Today
       </a>
-      <a routerLink="/orders/edit" routerLinkActive="active" class="nav-link">
-        Orders
+      <a routerLink="/orders" routerLinkActive="active" class="nav-link">
+        Manage orders
       </a>
     </section>
   </nav>
