fix(orders): change err msg

--- a/src/app/container/order-editor/order-editor.component.html
+++ b/src/app/container/order-editor/order-editor.component.html
@@ -74,7 +74,7 @@
 
       <!-- Notification about read only mode -->
       <app-alert *ngIf="!orderEditable" type="warning" icon="exclamation-triangle" [dismissable]="false">
-        This order cannot be changed
+        This order was processed and cannot be changed
       </app-alert>
 
       <!-- order structure error -->
