feat(css): Add styles for error poster and common styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/anim';
+@import 'styles/poster';
 
+.pos-a  {
+  position: absolute;
+}
 
 .flex-row {
   display: flex;
