feat(users): fetch users from api

--- a/src/app/management/users-manager/users-manager.component.html
+++ b/src/app/management/users-manager/users-manager.component.html
@@ -50,11 +50,14 @@
             type="checkbox"
             [checked]="isUserChecked(user.id)"
             (change)="toggleUserCheck(user.id)"
+            [disabled]="user.id == currentUserId"
           />
         </td>
 
         <td>
-          {{user.firstName}} {{user.lastName}}
+          <span class="text-link">
+            {{user.firstName}} {{user.lastName}}
+          </span>
         </td>
 
         <td>
