--- a/src/app/management/dish-editor/dish-editor.component.html
+++ b/src/app/management/dish-editor/dish-editor.component.html
@@ -66,11 +66,11 @@
           </label>
         </div>
         <div class="form-group">
-          <label for="empType">Dish Type</label>
+          <label for="type">Dish Type</label>
           <div class="select">
             <select
-              id="empType"
-              name="employeeType"
+              id="type"
+              name="type"
               formControlName="type"
             >
               <option
