--- a/src/app/management/users-manager/users-manager.component.html
+++ b/src/app/management/users-manager/users-manager.component.html
@@ -4,7 +4,7 @@
     <span>Delete selected</span>
   </button>
 
-  <button type="button" class="btn btn-success">
+  <button type="button" class="btn btn-success" (click)="openItemCreator()">
     <clr-icon shape="plus"></clr-icon>
     <span>Add new</span>
   </button>
@@ -55,7 +55,7 @@
         </td>
 
         <td>
-          <span class="text-link">
+          <span class="text-link" (click)="editItem(user)">
             {{user.firstName}} {{user.lastName}}
           </span>
         </td>
@@ -71,3 +71,28 @@
     </tbody>
   </table>
 </div>
+
+<!-- Editor modal -->
+<clr-modal
+  clrModalSize="md"
+  [(clrModalOpen)]="showEditor"
+  [clrModalClosable]="!blockModal"
+  [clrModalStaticBackdrop]="!blockModal"
+>
+  <h3 class="modal-title">
+    <span *ngIf="editorOperation == 0">Create a new</span><span *ngIf="editorOperation == 1">Edit the</span> dish
+  </h3>
+  <div class="modal-body">
+    <app-user-editor
+      *ngIf="showEditor"
+      [enabled]="showEditor"
+      [user]="editableUser"
+      [compactMode]="true"
+      (success)="onEditFinish(true)"
+      (error)="onEditFinish(false)"
+      (loading)="onEditLoading()"
+      (dismiss)="onEditDismiss()"
+    ></app-user-editor>
+  </div>
+</clr-modal>
+
