--- a/src/app/management/user-editor/user-editor.component.html
+++ b/src/app/management/user-editor/user-editor.component.html
@@ -13,7 +13,8 @@
   (ngSubmit)="onSubmit()"
 >
 
-  <section class="form-block" style="margin-bottom: 0">
+  <section class="form-block">
+    <label>Basic Information</label>
     <div class="form-group">
       <label for="firstName">First name</label>
       <label
@@ -77,7 +78,9 @@
         </span>
       </label>
     </div>
-
+  </section>
+  <section class="form-block" style="margin-bottom: 0">
+    <label>Security</label>
     <div class="form-group">
       <label for="password">Password</label>
       <label
@@ -100,7 +103,7 @@
     </div>
 
     <div class="form-group" *ngIf="!userExists">
-      <label for="level">User type</label>
+      <label for="level">User group</label>
       <div class="select">
         <select
           id="level"
