fix(users): UI tweaks

--- a/src/app/management/users-manager/users-manager.component.html
+++ b/src/app/management/users-manager/users-manager.component.html
@@ -1,4 +1,4 @@
-<app-header-toolbar label="Users">
+<app-header-toolbar label="User management">
   <button
     type="button"
     class="btn btn-danger"
