feat(settings): Add link to nav

--- a/src/app/management/management.component.html
+++ b/src/app/management/management.component.html
@@ -13,6 +13,9 @@
       <a routerLink="/management/users" routerLinkActive="active" class="nav-link">
         Users
       </a>
+      <a routerLink="/management/system" routerLinkActive="active" class="nav-link">
+        System
+      </a>
     </section>
   </nav>
 </div>
